# codilityTasks

./: CMakeLists.txt  FrogJmp.h  PermMissingElem.h  README.md  TapeEquilibrium.h
Arrays/: CyclicRotation.cpp  CyclicRotation.h  OddOccurencesInArray.h  OddOccurrencesInArray.cpp  OddOccurrencesInArray.h
Arrays/CyclicRotation/: CyclicRotation.cpp
Arrays/OddOccurrencesInArray/: OddOccurrencesInArray.cpp
CountingElements/: FrogRiverOne.cpp  FrogRiverOne.h  MaxCounters.cpp  MaxCounters.h  MissingInteger.cpp  MissingInteger.h  PermCheck.cpp  PermCheck.h  PremCheck.cpp
CountingElements/FrogRiverOne/: FrogRiverOne.h
CountingElements/MaxCounters/: MaxCounters.cpp
CountingElements/MissingInteger/: MissingInteger.cpp
CountingElements/PermCheck/: PermCheck.h
Iterations/: BinaryGap.cpp  BinaryGap.h
Iterations/BinaryGap/: BinaryGap.cpp
PrefixSums/: CountDiv.cpp  CountDiv.h  GenomicRangeQuery.cpp  MinAvgTwoSlice.cpp  MinAvgTwoSlice.h  PassingCars.cpp  PassingCars.h
PrefixSums/GenomicRangeQuery/: GenomicRangeQuery.cpp  GenomicRangeQuery.h
PrefixSums/MinAvgTwoSlice/: MinAvgTwoSlice.cpp
Sorting/: Distinct.cpp  Distinct.h  MaxProductOfThree.cpp  MaxProductOfThree.h  NumberOfDiscIntersections.cpp  NumberOfDiscIntersections.h  Triangle.cpp  Triangle.h
Sorting/MaxProductOfThree/: MaxProductOfThree.h
Sorting/NumberOfDiscIntersections/: NumberOfDiscIntersections.cpp
StacksAndQueues/: Brackets.cpp  Fish.cpp  StoneWall.cpp  StoneWall.h
TimeComplexity/: FrogJmp.cpp  FrogJmp.h  PermMissingElem.cpp  PermMissingElem.h  TapeEquilibrium.cpp  TapeEquilibrium.h
(+10 files in other folders)
